# jitify-libcu--test

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json  main.cu  operation.h.jit  timestamps.hpp  timestamps.hpp.jit  traits.h.jit  types.hpp.jit
cmake/: FindCUDALibs.cmake
